layout bugfix

--- a/pfixcore/docs/docbook/src/css/style.css
+++ b/pfixcore/docs/docbook/src/css/style.css
@@ -210,6 +210,11 @@ div.chapter {
   border-bottom: 1px #E6E6E6 solid;
 }
 
+div.book div.chapter {
+  padding: 0;
+  border: 0 none;
+}
+
 div.note {
   margin: 10px 0 0 15px;
   padding: 8px;
